--- a/teste.html
+++ b/teste.html
@@ -1,23 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Barbearia Alura</title>
+        <link rel="stylesheet" href="teste.css">
+    </head>
 
-    <h1>Sobre a GL Refrigerção</h1>
+    <body>
 
-    <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. 
-    Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+        <header>
+            <h1 class="hearder-tittle" >Barbearia Alura</h1>
+        </header>
 
-    <p><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+        <img id="banner" src="img/banner.jpg" alt="">
 
-    <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. 
-    O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+        <div>
+            <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
 
-</body>
+            <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. 
+            Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+
+            <p><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+
+            <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. 
+            O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+        </div>
+
+        <div class="benefits">
+            <h3 class="titulo-centralizado">Beneficios</h3>
+            <ul>
+                <li class="benefits-list">Atendimento aos Cliente</li>
+                <li class="benefits-list">Espaçço Diferenciado</li>
+                <li class="benefits-list">Localização</li>
+                <li class="benefits-list">Profissionais Qualificados</li>
+            </ul>
+
+            <img class="benefits-img" src="img/beneficios.jpg" alt="">
+        </div>
+
+        
+
+    </body>
 </html>
 
