--- a/products.html
+++ b/products.html
@@ -4,30 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Produtos</title>
+    <title>Serviços</title>
     
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="products.css">
 </head>
 <body>
 
     <header>
-        <a href="">
-            <img src="img/logo.png" alt="">
-        </a>
-        <nav>
-            <ul>
-                <a href="teste.html">
-                    <li>Home</li>
-                </a>
-                <a href="">
-                    <li>Produtos</li>
-                </a>
-                <a href="">
-                    <li>Contatos</li>
-                </a>
-            </ul>
-        </nav>
+        <div class="container">
+            <a href="">
+                <img src="img/logo.png" alt="">
+            </a>
+            <nav>
+                <ul>
+                    <a href="teste.html">
+                        <li>Home</li>
+                    </a>
+                    <a href="produtos.html">
+                        <li>Produtos</li>
+                    </a>
+                    <a href="contatos">
+                        <li>Contatos</li>
+                    </a>
+                </ul>
+            </nav>
+        </div>
     </header>
+
+    <main>
+        <ul class="services">
+            <li>
+                <h2>Cabelo</h2>
+                <img src="img/barba.jpg" alt="">
+                <p class="services-desc">Na tesoura ou máquina, como o cliente preferir</p>
+                <p class="services-price">R$ 25,00</p>
+            </li>
+            <li>
+                <h2>Barba</h2>
+                <img src="img/cabelo.jpg" alt="">
+                <p class="services-desc">Corte e desenho profissional de barba</p>
+                <p class="services-price">R$ 18,00</p>
+            </li>
+            <li>
+                <h2>Cabelo + Barba</h2>
+                <img src="img/cabelo+barba.jpg" alt="">
+                <p class="services-desc">Pacote completo de cabelo e barba</p>
+                <p class="services-price">R$ 35,00</p>
+            </li>
+        </ul>
+    </main>
     
 </body>
 </html>
