css da pagina de servicos

--- a/products.html
+++ b/products.html
@@ -54,6 +54,11 @@
             </li>
         </ul>
     </main>
+
+    <footer>
+        <img src="img/logo-branco.png" alt="">
+        <p>&copy; Copyrigth Barbearia Alura - 2019</p>
+    </footer>
     
 </body>
 </html>
