base header e footer

--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Serviços</title>
+    <title>Entre em </title>
     
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="products.css">
     <link rel="stylesheet" href="products.css">
 </head>
 <body>
@@ -33,32 +34,10 @@
     </header>
 
     <main>
-        <ul class="services">
-            <li>
-                <h2>Cabelo</h2>
-                <img src="img/barba.jpg" alt="">
-                <p class="services-desc">Na tesoura ou máquina, como o cliente preferir</p>
-                <p class="services-price">R$ 25,00</p>
-            </li>
-            <li>
-                <h2>Barba</h2>
-                <img src="img/cabelo.jpg" alt="">
-                <p class="services-desc">Corte e desenho profissional de barba</p>
-                <p class="services-price">R$ 18,00</p>
-            </li>
-            <li>
-                <h2>Cabelo + Barba</h2>
-                <img src="img/cabelo+barba.jpg" alt="">
-                <p class="services-desc">Pacote completo de cabelo e barba</p>
-                <p class="services-price">R$ 35,00</p>
-            </li>
-        </ul>
+
     </main>
 
     <footer>
         <img src="img/logo-branco.png" alt="">
         <p>&copy; Copyrigth Barbearia Alura - 2019</p>
     </footer>
-    
-</body>
-</html>
