--- a/start.html
+++ b/start.html
@@ -7,7 +7,7 @@
         <title>Barbearia Alura</title>
 
         
-        <link rel="stylesheet" href="teste.css">
+        <link rel="stylesheet" href="start.css">
     </head>
 
     <body>
