alteracoes de titulos

--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
         <title>Barbearia Alura</title>
 
         
-        <link rel="stylesheet" href="start.css">
+        <link rel="stylesheet" href="home.css">
     </head>
 
     <body>
