--- a/services.html
+++ b/services.html
@@ -7,7 +7,7 @@
     <title>Serviços</title>
     
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="products.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -25,7 +25,7 @@
                         <li>Produtos</li>
                     </a>
                     <a href="contatos">
-                        <li>contact</li>
+                        <li>Contatos</li>
                     </a>
                 </ul>
             </nav>
