--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Entre em </title>
+    <title>Contato</title>
     
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="products.css">
-    <link rel="stylesheet" href="products.css">
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 
@@ -34,6 +34,7 @@
     </header>
 
     <main>
+        <form action=""></form>
 
     </main>
 
