ajustes pag home

--- a/services.html
+++ b/services.html
@@ -8,23 +8,24 @@
     
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="services.css">
 </head>
 <body>
 
     <header>
-        <div class="container">
+        <div class="header-container">
             <a href="">
                 <img src="img/logo.png" alt="">
             </a>
             <nav>
                 <ul>
-                    <a href="teste.html">
+                    <a href="home.html">
                         <li>Home</li>
                     </a>
-                    <a href="products.html">
-                        <li>Produtos</li>
+                    <a href="services.html">
+                        <li>Serviços</li>
                     </a>
-                    <a href="contatos">
+                    <a href="contact.html">
                         <li>Contatos</li>
                     </a>
                 </ul>
