--- a/contact.html
+++ b/contact.html
@@ -14,19 +14,19 @@
 <body>
 
     <header>
-        <div class="container">
+        <div class="header-container">
             <a href="">
                 <img src="img/logo.png" alt="Logo da Barberia Alura">
             </a>
             <nav>
                 <ul>
-                    <a href="teste.html">
+                    <a href="home.html">
                         <li>Home</li>
                     </a>
-                    <a href="products.html">
-                        <li>Produtos</li>
+                    <a href="services.html">
+                        <li>Serviços</li>
                     </a>
-                    <a href="contatos">
+                    <a href="contact.html">
                         <li>contact</li>
                     </a>
                 </ul>
