--- a/home.html
+++ b/home.html
@@ -85,5 +85,10 @@
             <p>&copy; Copyrigth Barbearia Alura - 2019</p>
         </footer>
     </body>
+
+    <script>
+        var email = document.getElementById("email");
+        console.log(email);
+    </script>
 </html>
 
